=== HEAD

* Add SQL::Subscript#[] for using nested subscripts (accessing member of multi-dimensional array) (jeremyevans)

* Add Model.cache_anonymous_models accessor so you can disable the caching of classes created by Sequel::Model() (jeremyevans)

* Convert PostgreSQL JDBC arrays to Ruby arrays in the jdbc/postgres adapter (jeremyevans)

* The typecast_on_load extension now works correctly when saving new model objects when insert_select is enabled (jeremyevans)

* Add pg_array extension, for dealing with string and numeric PostgreSQL arrays (jeremyevans)

* Add Database#reset_conversion_procs to the postgres adapter, for use with extensions with modify default conversion procs (jeremyevans)

* Escape table and schema names when getting primary key or sequence information on PostgreSQL (jeremyevans)

* Escape identifiers when quoting on MySQL and SQLite (jeremyevans)

* Add Database#supports_drop_table_if_exists? for checking if DROP TABLE supports IF EXISTS (jeremyevans)

* Add Database#drop_table? for dropping a table if it already exists (jeremyevans)

* Log full SQL string by default for prepared statements created automatically by model prepared_statements* plugins (jeremyevans)

* Add ability for prepared statements to log full SQL string (jeremyevans)

* Add pg_statement_cache extension, for automatically preparing queries when using postgres adapter with pg driver (jeremyevans)

* Add pg_auto_parameterize extension, for automatically parameterizing queries when using postgres adapter with pg driver (jeremyevans)

* Add ConnectionPool#disconnection_proc= method, to modify disconnection_proc after the pool has been created (jeremyevans)

* Add ConnectionPool#after_connect= method, to modify after_connect proc after the pool has been created (jeremyevans)

* Add ConnectionPool#all_connections method, which yields all available connections in the pool (jeremyevans)

=== 3.33.0 (2012-03-01)
